--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       <div class="players">
         <p>vs</p>
       </div>
-      <div class="players" id="cpu">
-        <p>CPU</p>
+      <div class="players" id="computer">
+        <p>Computer</p>
       </div>
-      <div class="points" id="score-player">
-        <p>0</p>
+      <div class="points" id="score-player-div">
+        <p id="score-player">0</p>
       </div>
       <div class="points">
         <p>-</p>
       </div>
-      <div class="points" id="score-cpu">
-        <p>0</p>
+      <div class="points" id="score-computer-div">
+        <p id="score-computer">0</p>
       </div>
     </div>
     <div id="section-options">
@@ -48,8 +48,8 @@
       <p id="final-message"></p>
     </div>
   </div>
-  <div id="reset">
-    <button>Reset</button>
+  <div id="reset-div">
+    <button id="reset">Reset</button>
   </div>
   <script src="script.js"></script>
 </body>
